--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deploy-dev": "graph deploy sommelier/uniswap-v3 --ipfs http://35.197.14.14:5000/ --node http://35.197.14.14:8020/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
     "watch-local": "graph deploy ianlapham/uniswap-v3 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001",
-    "deploy-celo": "graph deploy joaquin-hernandez/test --product hosted-service --deploy-key cd359f440b4a4e7385535bd55faa8870 --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/"
+    "deploy-celo": "graph deploy --product hosted-service --access-token cd359f440b4a4e7385535bd55faa8870 --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ joaquin-hernandez/Celo-Block-Uniswapv3 "
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.20.0",
